--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "start": "electron ."
   },
   "devDependencies": {
-    "electron": "^1.6.2",
+    "electron": "1.6.6",
     "electron-packager": "^5.0.1",
-    "electron-prebuilt": "^0.30.3",
+
     "electron-rebuild": "^1.5.7",
     "electron-context-menu": "0.8.0"
   },
@@ -17,7 +17,6 @@
     "freefare": "0.1.4",
     "moment": "^2.17.1",
     "request": "^2.79.0",
-    "sleep": "^5.1.0",
     "node-yaml-config": "0.0.4",
     "thermalprinter": "0.3.8",
     "serialport": "4.0.7",
