--- a/package.json
+++ b/package.json
@@ -3,25 +3,32 @@
   "version": "2.0.0",
   "main": "./main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "postinstall": "electron-rebuild",
+    "electron-rebuild": "electron-rebuild"
   },
   "devDependencies": {
-    "electron": "1.6.6",
+    "devtron": "^1.4.0",
+    "electron": "1.8.1",
+    "electron-context-menu": "0.9.1",
     "electron-packager": "^5.0.1",
-    "electron-rebuild": "^1.5.7",
-    "electron-context-menu": "0.8.0"
+    "electron-rebuild": "^1.6.0"
   },
   "dependencies": {
-    "ps-node": "0.1.5",
-    "moment": "^2.17.1",
-    "request": "^2.79.0",
-    "node-yaml-config": "0.0.4",
-    "thermalprinter": "0.3.8",
-    "serialport": "4.0.7",
-    "lockfile": "1.0.3",
+    "bluebird": "3.5.0",
+    "debug": "^3.1.0",
+    "electron-debug": "^1.4.0",
     "fancy-log": "1.3.0",
-    "tcp-ping": "0.1.1"
+    "freefare": "0.1.5",
+    "lockfile": "1.0.3",
+    "moment": "^2.19.1",
+    "node-yaml-config": "0.0.4",
+    "ps-node": "0.1.5",
+    "request": "^2.83.0",
+    "serialport": "4.0.7",
+    "tcp-ping": "0.1.1",
+    "thermalprinter": "0.3.8"
   },
   "author": "John W Fail",
-  "license": "ISC"
+  "license": "MIT"
 }
